[gd_scene load_steps=15 format=2]

[ext_resource path="res://GUI/GUI.gd" type="Script" id=1]
[ext_resource path="res://GUI/board_v2.png" type="Texture" id=2]
[ext_resource path="res://GUI/wirefram_board_v4.png" type="Texture" id=3]
[ext_resource path="res://GUI/border_top.png" type="Texture" id=5]
[ext_resource path="res://GUI/border_bottom.png" type="Texture" id=6]
[ext_resource path="res://Common/Roboto-Medium.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://GUI/scoreboard.png" type="Texture" id=8]
[ext_resource path="res://Common/ScoreFont.tres" type="DynamicFont" id=9]

[sub_resource type="StreamTexture" id=3]

[sub_resource type="Theme" id=4]
/icons/texture = SubResource( 3 )

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.00440529, 1 )
colors = PoolColorArray( 0, 0, 0, 0.00392157, 0.0396476, 0.0396476, 0.0396476, 0.0434137, 0.941176, 0.890196, 0.211765, 0.611765 )

[sub_resource type="GradientTexture2D" id=6]
gradient = SubResource( 7 )
width = 384
height = 1080
fill_to = Vector2( 0, 1 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 2
font_data = ExtResource( 7 )

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
input_pass_on_modal_close_click = false
script = ExtResource( 1 )

[node name="EndGameCanvas" type="CanvasLayer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="BoardSquare" type="TextureRect" parent="CanvasLayer"]
margin_right = 1920.0
margin_bottom = 824.0
mouse_filter = 2
texture = ExtResource( 3 )

[node name="LeftPanel" type="TextureRect" parent="CanvasLayer"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = 236.0
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
input_pass_on_modal_close_click = false
theme = SubResource( 4 )
texture = ExtResource( 2 )

[node name="LeftTurnIndicator" type="TextureRect" parent="CanvasLayer/LeftPanel"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 48.0
margin_top = -56.0
margin_right = 432.0
margin_bottom = 1024.0
mouse_filter = 2
texture = SubResource( 6 )

[node name="UpNextLabel" type="RichTextLabel" parent="CanvasLayer/LeftPanel"]
margin_left = 632.0
margin_top = -24.0
margin_right = 1016.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 1035, -60 )
input_pass_on_modal_close_click = false
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/mono_font = SubResource( 8 )
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
bbcode_text = "[center]UP NEXT[/center]"
text = "UP NEXT"
scroll_active = false

[node name="RightPanel" type="TextureRect" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -960.0
margin_top = 236.0
margin_bottom = 540.0
mouse_filter = 2
input_pass_on_modal_close_click = false
texture = ExtResource( 2 )

[node name="RightTurnIndicator" type="TextureRect" parent="CanvasLayer/RightPanel"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 384.0
margin_bottom = 1080.0
mouse_filter = 2
texture = SubResource( 6 )

[node name="UpNextLabel" type="RichTextLabel" parent="CanvasLayer/RightPanel"]
margin_left = -72.0
margin_top = -24.0
margin_right = 312.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 1035, -60 )
input_pass_on_modal_close_click = false
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/mono_font = SubResource( 8 )
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
bbcode_text = "[center]UP NEXT[/center]"
text = "UP NEXT"
scroll_active = false

[node name="TopBorder" type="TextureRect" parent="CanvasLayer"]
visible = false
margin_left = 384.0
margin_right = 1536.0
margin_bottom = 60.0
texture = ExtResource( 5 )

[node name="BottomBorder" type="TextureRect" parent="CanvasLayer"]
visible = false
margin_left = 384.0
margin_top = 1024.0
margin_right = 1536.0
margin_bottom = 1084.0
texture = ExtResource( 6 )

[node name="Tween" type="Tween" parent="."]

[node name="Overlays" type="Node2D" parent="."]
z_index = 20
__meta__ = {
"_editor_description_": "Adjusts z.index for overlay"
}

[node name="LeftOverlay" type="ColorRect" parent="Overlays"]
margin_top = 774.0
margin_right = 960.0
margin_bottom = 1080.0
mouse_filter = 2
color = Color( 0.270588, 0.305882, 0.188235, 0.498039 )

[node name="RightOverlay" type="ColorRect" parent="Overlays"]
margin_left = 960.0
margin_top = 779.0
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
color = Color( 0.270588, 0.305882, 0.188235, 0.498039 )

[node name="LeftPlayerScoreboard" type="Sprite" parent="."]
position = Vector2( 136, 760 )
scale = Vector2( 1, 0.5 )
texture = ExtResource( 8 )

[node name="LeftPlayerScore" type="Label" parent="LeftPlayerScoreboard"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -153.0
margin_top = -105.5
margin_right = -126.0
margin_bottom = -48.5
grow_horizontal = 2
rect_scale = Vector2( 1, 1.5 )
custom_fonts/font = ExtResource( 9 )
text = "0"
align = 1
valign = 1

[node name="RightPlayerScoreboard" type="Sprite" parent="."]
position = Vector2( 1776, 768 )
scale = Vector2( 1, 0.5 )
texture = ExtResource( 8 )
flip_h = true

[node name="RightPlayerScore" type="Label" parent="RightPlayerScoreboard"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -185.0
margin_top = -105.5
margin_right = -94.0
margin_bottom = -48.5
grow_horizontal = 2
rect_scale = Vector2( 1, 1.5 )
custom_fonts/font = ExtResource( 9 )
text = "0"
align = 1
valign = 1
